# rust-desktop-app

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  package.json  pcss.config.js  rollup.config.js  rustfmt.toml  sketchdev.config.js
design/: app-assets.sketch
src-tauri/: Cargo.toml  Tauri.toml
src-tauri/src/: ctx.rs  error.rs  event.rs  main.rs  prelude.rs  utils.rs
src-tauri/src/ipc/: mod.rs  params.rs  project.rs  response.rs  task.rs
src-tauri/src/model/: bmc.rs  bmc_base.rs  mod.rs  model_store.rs  project.rs  seed_for_dev.rs  task.rs
src-tauri/src/model/store/: mod.rs  surreal_modql.rs  surreal_store.rs  try_froms.rs  x_take_impl.rs  x_takes.rs
src-tauri/src/store/: mod.rs  try_froms.rs  utils.rs  x_impls.rs  x_takes.rs
src-tauri/src/utils/: mod.rs  x_take.rs  x_utils.rs
src-ui/: tsconfig.json
src-ui/pcss/: base.pcss  d-ui.pcss  defaults.pcss  fonts.pcss  main.pcss  var-colors.pcss
src-ui/pcss/view/: app-v.pcss  menu-c.pcss  nav-v.pcss  project-v.pcss  tasks-dt.pcss
src-ui/src/: event.ts  ipc.ts  main.ts  router.ts  svg-symbols.ts  type-enhancements.ts  utils.ts
src-ui/src/bindings/: HubEvent.ts  ModelMutateResultData.ts  Project.ts  ProjectForCreate.ts  ProjectForUpdate.ts  Task.ts  TaskForCreate.ts  TaskForUpdate.ts  index.ts  type_asserts.ts
src-ui/src/model/: index.ts
src-ui/src/view/: app-v.ts  index.ts  menu-c.ts  nav-v.ts  project-v.ts  tasks-dt.ts
